# servier-mgati

./: README.md
.github/workflows/: build_push_app_artifact_registry.yml  deploy_dag_composer.yml
dags/: dag_servier_drug_graph.py
drugs_graph/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
drugs_graph/app/: main.py
drugs_graph/app/outputs/: graph.json
drugs_graph/app/src/ad_hoc/: json_processing.py
drugs_graph/app/src/data_processing/: load.py  preprocess.py  transform.py
drugs_graph/app/src/files_processing/: files_processing.py
drugs_graph/app/src/graph_link/: journal_mentions.py
drugs_graph/app/tests/unit/: test_files_processing.py  test_json_processing.py  test_preprocess.py  test_transform.py
sql/: sales_by_day.sql  sales_by_product_type.sql
